--- a/kaspi-ud/package.json
+++ b/kaspi-ud/package.json
@@ -2,6 +2,7 @@
   "name": "vercel-kaz-id-card",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,11 +11,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "vite": "^5.0.0",
     "@shadcn/ui": "^1.0.0",
     "lucide-react": "^0.264.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0"
