--- a/kaspi-ud/package.json
+++ b/kaspi-ud/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^5.0.0",
-    "@shadcn/ui": "^1.0.0",
+    "@shadcn/ui": "latest",
     "lucide-react": "^0.264.0"
   },
   "devDependencies": {
