--- a/kaspi-ud/package.json
+++ b/kaspi-ud/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
